2011-05-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/ports/ucz80/spec.mk: fixed

2011-05-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/ports/gbz80/spec.mk,
	* support/regression/ports/ucz80/spec.mk,
	* support/regression/ports/z80/spec.mk: fixed bug 3158245
	* src/SDCCast.c(decorateType): fixed bug 3297181

2011-05-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c(resolveSymbols): fixed bug 3188899
	* support/regression/tests/bug3188899.c: new, added

2011-05-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/lklex.c(nxtline): use provided linker script extension
	  instead of forcing .lnk or .lk
	* sdas/linksrc/aslink.h,
	* sdas/linksrc/lkdata.c,
	* sdas/linksrc/lkmain.c,
	* sdas/doc/asmlnk.txt,
	* sdas/doc/asxhtm.html: documented changed flags

2011-04-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/aslink.h,
	* sdas/linksrc/lkmain.c(intsiz, doparse, parse, main, usage): synced with
	  ASxxxx 5, changed command line flags
	* src/hc08/main.c,
	* src/SDCCmain.c: use new flags

2011-04-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/lkbank.c: new, added
	* sdas/linksrc/aslink.h,
	* sdas/linksrc/aslink.dsp,
	* sdas/linksrc/Makefile.in: added lkbank.c
	* sdas/linksrc/lkmain.c(main, lkexit): factored out lkfopen and lkfclose
	* sdas/linksrc/lkrloc.c(relr, rele): changed oflag=4 for ELF

2011-04-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCglue.c(emitRegularMap, emitOverlay): fixed bug 3038028
	* support/regression/tests/bug1477149.c,
	* support/regression/fwk/lib/statics.c: added s_get_indexed for bug 3038028

2011-04-23 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/lkar.c(get_member_name, fndsym_ar): small fixes
	* sdas/linksrc/lkmain.c(main): fixed bug 3290988
	* sdas/linksrc/aslink.h,
	* sdas/linksrc/lkhead.c,
	* sdas/linksrc/lkihx.c,
	* sdas/linksrc/lklex.c,
	* sdas/linksrc/lklibr.c,
	* sdas/linksrc/lklibr.h,