@@ -1,3 +1,8 @@
+2011-05-06 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/z80/gen.c(setupPair, aopGet, genFunction): partial fix for
+	  --fomit-frame-pointer
+
 2011-05-05 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* support/regression/ports/ucz80/spec.mk: fixed
